Utworzono za pomocą Colab

--- a/5_Zajecia_Analiza_sentymentu_w_czasie.ipynb
+++ b/5_Zajecia_Analiza_sentymentu_w_czasie.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO6k6pBs7NGQPgobebrKMPn",
+      "authorship_tag": "ABX9TyPUyyB0wS6Oy5bCBiifb7DH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -545,10 +545,10 @@
         "\n",
         "\n",
         "ggplot(df_all, aes(x=sentence, y=QDAP)) +\n",
-        "  geom_line(color=\"red\", size=1) +\n",
-        "  geom_line(aes(x=sentence, y=GI), color=\"green\", size=1) +\n",
-        "  geom_line(aes(x=sentence, y=HE), color=\"blue\", size=1) +\n",
-        "  geom_line(aes(x=sentence, y=LM), color=\"orange\", size=1) +\n",
+        "  geom_line(color=\"red\", linewidth=1) +\n",
+        "  geom_line(aes(x=sentence, y=GI), color=\"green\", linewidth=1) +\n",
+        "  geom_line(aes(x=sentence, y=HE), color=\"blue\", linewidth=1) +\n",
+        "  geom_line(aes(x=sentence, y=LM), color=\"orange\", linewidth=1) +\n",
         "  labs(x = \"Oś czasu zdań\", y = \"Sentyment\") +\n",
         "  theme_gdocs() +\n",
         "  ggtitle(\"Zmiana sentymentu w czasie\")\n",
@@ -573,9 +573,9 @@
           "height": 1000
         },
         "id": "LDPO0Sbk_qna",
-        "outputId": "f3354f05-1182-413c-8882-8cc25828e46f"
+        "outputId": "2dc94d7c-33d7-4517-c1b6-2a57d8bb5a3b"
       },
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -617,9 +617,6 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Warning message:\n",
-            "“\u001b[1m\u001b[22mUsing `size` aesthetic for lines was deprecated in ggplot2 3.4.0.\n",
-            "\u001b[36mℹ\u001b[39m Please use `linewidth` instead.”\n",
             "\u001b[1m\u001b[22m`geom_smooth()` using method = 'loess' and formula = 'y ~ x'\n",
             "\u001b[1m\u001b[22m`geom_smooth()` using method = 'loess' and formula = 'y ~ x'\n",
             "\u001b[1m\u001b[22m`geom_smooth()` using method = 'loess' and formula = 'y ~ x'\n",
